# todoshit

./: .gitignore
src/backend/: .env.example  pyproject.toml
src/backend/app/: settings.py  urls.py
src/backend/core/: admin.py  choices.py  filters.py  models.py  serializers.py  signals.py  urls.py  views.py
src/backend/core/migrations/: 0001_initial.py  0002_tag_workspace.py  0003_alter_ticket_tags_alter_workspace_name.py
src/frontend/: app.vue  bun.lockb  nuxt.config.ts  package.json
src/frontend/components/: fastCommand.vue  note.vue  noteList.vue  shortcut.vue  sidebar.vue  themeToggle.vue  workspaceSettings.vue
src/frontend/components/workspace/: create.vue  delete.vue  edit.vue  select.vue  settings.vue
src/frontend/layouts/: default.vue
src/frontend/pages/: index.vue  signin.vue  signout.vue  signup.vue
src/frontend/stores/: workspace.ts
src/frontend/types/: pageWrapper.ts  tag.ts  ticket.ts  workspace.ts
