[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Rest API powered by Django and DRF for the Todoshit web-app."
authors = ["revolex"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.0.7"
djangorestframework = "^3.15.2"
django-cors-headers = "^4.4.0"
dj-rest-auth = {extras = ["with-social"], version = "^6.0.0"}
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.9"
drf-spectacular = {extras = ["sidecar"], version = "^0.27.2"}

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.6"
mypy = "^1.11.1"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
